Fix selected item alignment

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -90,7 +90,6 @@
 	.navigation-body > .navigation-list > .navigation-item:not(.selected) {
 		.animation; // Enabling HW acceleration
 		position: relative;
-		vertical-align: middle;
 
 		// Top Level Item Name
 
